UDF compatibility options in user guide